--- a/index.html
+++ b/index.html
@@ -249,6 +249,7 @@
     </section>
     <!-- Services Section End -->
 
+<!-- COMMENT THIS
     <!-- Start Video promo Section -->
     <section class="video-promo section-padding">
       <div class="overlay"></div>
@@ -368,6 +369,7 @@
       </div>
     </section>
     <!-- Team Section End -->
+-->
 
     <!-- Counter Section Start -->
     <section id="counter" class="section-padding">
@@ -965,7 +967,7 @@
             </div>
           </div>
           <div class="col-lg-4 col-md-5 col-xs-12">
-            <p class="float-right">Designed and Developed by <a href="http://uideck.com" rel="nofollow">UIdeck</a></p>
+            <p class="float-right">Powered by <a href="https://www.estudentsguide.com" rel="dofollow">ESG-Network</a></p>
           </div> 
         </div>
       </div>
